# kratos

./: .bazelrc  .editorconfig  .generated_files  .gitignore  .gitlab-ci.yml  .golangci.yml  .gometalinter.json  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  HERO.md  LICENSE  Makefile  OWNERS  README.md  README_zh.md  ROADMAP.md  SECURITY.md  app.go  app_test.go  buf.gen.yaml  buf.yaml  codecov.yml  context.go  converts.go  example_test.go  go.mod  go.sum  go_common_job.yaml  jenkinsfile  labels.yaml  options.go  options_test.go  service.go  tag.sh  tea.yml  version.go  yxf.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  semantic.yml  stable.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  proposal.md  question.md
.github/workflows/: codeql-analysis.yml  comment-check.yml  gitee-sync.yml  go.yml  issue-translator.yml  lint.yml  reviewdog.yml  test.yaml  test.yml
.gitlab/issue_templates/: Bug.md  Doc.md  Feature.md  Refactor.md  Suggestion.md
.gitlab/merge_request_templates/: Common.md
.rider/: .gometalinter.json  CHANGELOG.md  CONTRIBUTORS.md  OWNERS  bazel_build.sh  changefiles.sh  changepkgs.sh  lint.sh  make_update.sh  sagacheck.sh  unit_test.sh
api/: README.md  annotations.pb.go  annotations.proto  errors.pb.go
api/metadata/: metadata.pb.go  metadata.proto  metadata_grpc.pb.go  metadata_http.pb.go  server.go  service.go
app/: BUILD  CONTRIBUTORS.md  OWNERS  README.md
app/admin/: BUILD  OWNERS  README.md
app/admin/ep/melloi/service/proto/: BUILD.bazel  Makefile  README.md  comment.go  enum.go  field.go  go.mod  group.go  import.go  message.go  oneof.go  option.go  parser.go  proto.go  range.go  reserved.go  service.go  syntax.go  token.go  walk.go
app/common/: BUILD  OWNERS
app/infra/: BUILD  OWNERS
app/interface/: BUILD  OWNERS  README.md
app/interface/main/player/dao/: BUILD.bazel  account.go  account_test.go  archive.go  archive_test.go  creative.go  creative_test.go  dao.go  dao_test.go  mysql.go  mysql_test.go  online.go  online_test.go  playurl.go  playurl_test.go
app/interface/main/player/http/: BUILD.bazel  archive.go  http.go  player.go  playurl.go
app/job/: BUILD  OWNERS  README.md
app/job/openplatform/open-sug/api/grpc/v1/: BUILD.bazel
app/service/: BUILD  OWNERS  README.md
app/tool/: BUILD  OWNERS
app/tool/saga/cmd/: BUILD.bazel  main.go  saga-test.toml
app/tool/saga/model/: BUILD.bazel  gitlab.go  gitlab_comment.go  gitlab_mr.go  gitlab_pipeline.go  gitlab_push.go  mail.go  model.go  model_test.go  wechat.go
balancer/: filter.go  node.go  selector.go
broker/: broker.go  message.go
buf/apis/: buf.yaml
cache/: cache.go
cmd/kratos/: LICENSE  go.mod  go.sum  kratos.go  main.go  version.go
cmd/proto-gen-go-broker/: broker.go  main.go
cmd/protoc-gen-go-errors/: buf.gen.yaml  buf.yaml  errors.go  errorsTemplate.tpl  errors_test.go  go.mod  go.sum  main.go  template.go  version.go
config/: README.md  apply.go  config.go  config_test.go  format.go  merge.go  merge_test.go  options.go  options_test.go  reader.go  reader_test.go  resolver.go  source.go  value.go  value_test.go  variable.go  watcher.go
docs/: CNAME  FAQ.md  README.md  _sidebar.md  blademaster-mid.md  blademaster-mod.md  blademaster-pb.md  blademaster-quickstart.md  blademaster.md  breaker.md  cache-mc.md  cache-redis.md  cache.md  config-paladin.md  config.md  database-hbase.md  database-mysql-orm.md  database-mysql.md  database.md  index.html  install.md  kratos-genbts.md  kratos-genmc.md  kratos-protoc.md  kratos-swagger.md  kratos-tool.md  logger.md  protoc.md  quickstart.md  ratelimit.md  trace.md  ut-support.md  ut-testcli.md  ut-testgen.md  ut.md  warden-balancer.md  warden-mid.md  warden-pb.md  warden-quickstart.md  warden-resolver.md  (+1 more)
encoding/: README.md  encoding.go  encoding_test.go
errors/: code.go  codes.go  errors.go  errors.pb.go  errors.proto  errors_test.go  http.go  i18n.go  types.go  types_test.go  wrap.go  wrap_test.go
event/: README.md  event.go
events/: pubsub.go  receiver.go  sender.go  server.go
example/: README.md  go.sum
examples/: README.md  go.mod  go.sum
hack/: .lintcheck_failures  .test_ignored_files  resolve-modules-test.sh  resolve-modules.sh  tools.sh  util.sh
health/: check.go  checker.go  error.go  health.go  health.pb.go  health.proto  health_test.go  option.go  status.go
internal/: README.md
log/: README.md  builder.go  builder_test.go  context.go  context_test.go  filter.go  filter_test.go  global.go  global_test.go  handler.go  helper.go  helper_test.go  helper_writer.go  helper_writer_test.go  level.go  level_test.go  log.go  log_benchmark_test.go  log_test.go  logger.go  logger_test.go  nop.go  options.go  std.go  std_test.go  stdlog.go  stdout.go  value.go  value_test.go  verbose.go  verbose_test.go  wrap.go  wrap_test.go  wrapper.go  wrapper_test.go
metadata/: context.go  metadata.go  metadata_test.go
metrics/: README.md  counter.go  gauge.go  histogram.go  iterator.go  metrics.go  point_gauge.go  point_gauge_test.go  point_policy.go  reduce.go  reduce_test.go  rolling_counter.go  rolling_counter_test.go  rolling_gauge.go  rolling_gauge_test.go  rolling_policy.go  rolling_policy_test.go  summary.go  window.go  window_test.go
middleware/: context.go  middleware.go  middleware_test.go  selector.go  selector_test.go
project-template/: go.mod
pubsub/: README.md  pubsub.go
queue/: README.md  options.go  queue.go
redact/: redact.pb.go  redact.proto
registry/: README.md  registry.go  registry_test.go
retry/: condition.go  condition_test.go  retry.go  retry_test.go
scripts/: resolve-modules.sh  tools.sh
selector/: balancer.go  default.go  default_node.go  default_selector.go  filter.go  global.go  isnil.go  mock.go  options.go  peer.go  peer_test.go  selector.go  selector_test.go
server/: server.go
status/: code.go  error.go  status.go  status_test.go
transport/: header.go  request.go  selector.go  transport.go  transport_test.go
version/: version.go
(+21294 files in other folders)
